--- a/eng/pipelines/pipeline-generation-single.yml
+++ b/eng/pipelines/pipeline-generation-single.yml
@@ -21,7 +21,8 @@ variables:
 jobs:
 - job: GeneratePipeline
   pool:
-    vmImage: 'windows-2019'
+    name: azsdk-pool-mms-ubuntu-2004-general
+    vmImage: MMSUbuntu20.04
   steps:
   - checkout: none
   - template: /eng/common/pipelines/templates/steps/install-pipeline-generation.yml
