Move notifications to azsdk pool (#3043)

--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -32,7 +32,8 @@ stages:
           PathPrefix: 'go'
 
     pool:
-      vmImage: ubuntu-20.04
+      name: azsdk-pool-mms-ubuntu-2004-general
+      vmImage: MMSUbuntu20.04
 
     variables:
       Organization: azure-sdk
