--- a/tools/js-sdk-release-tools/package.json
+++ b/tools/js-sdk-release-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/js-sdk-release-tools",
-  "version": "2.2.1",
+  "version": "2.2.3",
   "description": "",
   "scripts": {
     "start": "node dist/changelogToolCli.js",
@@ -23,6 +23,7 @@
     "colors": "1.4.0",
     "command-line-args": "^5.1.1",
     "comment-json": "^4.1.0",
+    "es5-ext": "0.10.56",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.10",
     "log": "^6.0.0",
