New pipeline to release api-stub-generator to devops feed (#3054)
* New stage yml -> archetype-sdk-tool-python.yml
* New pipeline to release api-stub-generator to devops feed via a localized ci.yml

Co-authored-by: scbedd <45376673+scbedd@users.noreply.github.com>
Co-authored-by: Wes Haggard <weshaggard@users.noreply.github.com>

--- a/eng/pipelines/templates/steps/use-python-version.yml
+++ b/eng/pipelines/templates/steps/use-python-version.yml
@@ -21,6 +21,6 @@ steps:
 
   # use
   - task: UsePythonVersion@0
-    displayName: "Use Python $(PythonVersion)"
+    displayName: "Use Python ${{ parameters.versionSpec }}"
     inputs:
       versionSpec: ${{ parameters.versionSpec }}
