--- a/tools/js-sdk-release-tools/package.json
+++ b/tools/js-sdk-release-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/js-sdk-release-tools",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "description": "",
   "scripts": {
     "start": "node dist/changelogToolCli.js",
@@ -23,15 +23,13 @@
     "colors": "1.4.0",
     "command-line-args": "^5.1.1",
     "comment-json": "^4.1.0",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.10",
+    "js-yaml": "^4.1.0",
     "parse-ts-to-ast": "^0.1.1",
     "semver": "^7.3.5",
     "shelljs": "^0.8.4",
     "simple-git": "^3.4.0",
     "ts-morph": "^12.0.0",
     "tslib": "^1.9.3",
-    "url-join": "^4.0.1",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
