Update mirror-repos.yml (#3079)

--- a/eng/pipelines/mirror-repos.yml
+++ b/eng/pipelines/mirror-repos.yml
@@ -91,6 +91,14 @@ jobs:
             TargetRepos:
               azure-sdk/azure-docs-sdk-java:
 
+          Azure/azure-powershell:
+            TargetRepo:
+              azure-sdk/azure-powershell:
+
+          Azure/azure-resource-manager-schemas:
+            TargetRepos:
+              azure-sdk/azure-resource-manager-schemas:
+
     - template: ./templates/steps/sync-repo-branch.yml
       parameters:
         GH_TOKEN: $(azuresdk-github-pat)
