--- a/tools/sdk-testgen/packages/autorest.gotest/package.json
+++ b/tools/sdk-testgen/packages/autorest.gotest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@autorest/gotest",
-    "version": "2.2.1",
+    "version": "3.0.0",
     "description": "Autorest extension for go test generation",
     "main": "dist/index.js",
     "scripts": {
@@ -30,8 +30,8 @@
     "devDependencies": {
         "@types/jest": "^26.0.24",
         "@types/node": "10.17.0",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
+        "@typescript-eslint/eslint-plugin": "^5.17.0",
+        "@typescript-eslint/parser": "^5.17.0",
         "cpy-cli": "^3.1.1",
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
@@ -43,9 +43,9 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
-        "@autorest/codemodel": "4.17.2",
+        "@autorest/codemodel": "4.18.2",
         "@autorest/extension-base": "~3.4.4",
-        "@autorest/go": "4.0.0-preview.36",
+        "@autorest/go": "~4.0.0-preview.38",
         "@autorest/testmodeler": "~2.2.4",
         "@azure-tools/codegen": "~2.9.0",
         "@azure-tools/linq": "~3.1.0",
