--- a/tools/test-proxy/ci.yml
+++ b/tools/test-proxy/ci.yml
@@ -29,23 +29,32 @@ extends:
     DockerTagPrefix: '1.0.0-dev.'
     DockerDeployments:
     - name: test_proxy_linux
-      pool: 'ubuntu-20.04'
+      pool: 'azsdk-pool-mms-ubuntu-2004-general'
+      vmImage: 'MMSUbuntu20.04'
       dockerRepo: 'engsys/testproxy-lin'
       prepareScript: tools/test-proxy/docker/prepare.ps1
       dockerFile: 'tools/test-proxy/docker/dockerfile'
       stableTags:
       - 'latest'
     - name: test_proxy_linux_arm64
-      pool: 'ubuntu-20.04'
+      pool: 'azsdk-pool-mms-ubuntu-2004-general'
+      vmImage: 'MMSUbuntu20.04'
       dockerRepo: 'engsys/testproxy-lin-arm64'
-      prepareScript: tools/test-proxy/docker/prepare.ps1
-      dockerFile: 'tools/test-proxy/docker/dockerfile-arm64'
+      prepareScript: 'tools/test-proxy/docker/prepare.ps1 -qemu'
+      additionalDockerArgs: '--build-arg ARCH=-arm64v8 --platform linux/arm64'
+      dockerFile: 'tools/test-proxy/docker/dockerfile'
       stableTags:
       - 'latest'
     - name: test_proxy_windows
-      pool: 'windows-2019'
+      pool: 'azsdk-pool-mms-win-2019-general'
+      vmImage: 'MMS2019'
       dockerRepo: 'engsys/testproxy-win'
       prepareScript: tools/test-proxy/docker/prepare.ps1
       dockerFile: 'tools/test-proxy/docker/dockerfile-win'
+      stableTags:
+      - 'latest'
+    ManifestDeployment:
+    - name: 'test_proxy_multiarch'
+      dockerRepo: 'engsys/test-proxy'
       stableTags:
       - 'latest'
