--- a/tools/test-proxy/docker/dockerfile
+++ b/tools/test-proxy/docker/dockerfile
@@ -1,4 +1,5 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0.102-alpine3.14 AS build
+ARG ARCH=
+FROM mcr.microsoft.com/dotnet/sdk:6.0.102-alpine3.14${ARCH} AS build
 
 # copy the code
 COPY docker_build/Azure.Sdk.Tools.TestProxy/ /proxyservercode
@@ -6,7 +7,7 @@ COPY docker_build/Azure.Sdk.Tools.TestProxy/ /proxyservercode
 # publish the package
 RUN cd /proxyservercode && dotnet publish -c Release -o /proxyserver -f net6.0
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine3.14
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine3.14${ARCH}
 
 ENV \
     NO_AT_BRIDGE=1 \
