move codes of azure-sdk-pipeline to azure-sdk-tools (#3128)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -27,3 +27,4 @@
 /tools/sdk-testgen/              @changlong-liu @tadelesh
 /tools/js-sdk-release-tools/     @dw511214992 @qiaozha @MaryGao
 /tools/keyvault-mock-attestation @maorleger
+/tools/sdk-generation-pipeline   @dw511214992 @chunyu3 @zzvswxy
