[Test-Proxy] Taking advantage of new boolean switch that will dump configuration (#3125)
* taking advantage of new boolean switch that will dump configuration

* apparently dragonfruit has an issue with any combination of argument titled 'dumpEnv', 'dumpConfig', 'configDump', 'envDump' and other options. 'dump' is the only one that seemingly gets honored

--- a/tools/test-proxy/docker/dockerfile
+++ b/tools/test-proxy/docker/dockerfile
@@ -47,4 +47,4 @@ WORKDIR /proxyserver
 
 COPY --from=build /proxyserver .
 
-ENTRYPOINT ["dotnet", "Azure.Sdk.Tools.TestProxy.dll", "--storage-location", "/srv/testproxy"]
+ENTRYPOINT ["dotnet", "Azure.Sdk.Tools.TestProxy.dll", "--storage-location", "/srv/testproxy", "--dump"]
